# screen-13

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/workflows/: rust-clippy.yml  rust.yml
benches/: README.md  bitmap.rs  my_benchmark.rs  pak.rs  text.rs
benches/gfx-backend-mock/: Cargo.toml
benches/gfx-mock/: Cargo.toml
contrib/: README.md
contrib/rel-mgmt/: check  run-all-examples
contrib/screen-13-egui/: Cargo.toml  README.md
contrib/screen-13-egui/shaders/: frag.glsl  vert.glsl
contrib/screen-13-egui/src/: lib.rs
contrib/screen-13-fx/: Cargo.toml  README.md  build.rs
contrib/screen-13-fx/res/shader/compute/: decode_bitmap_rgb_rgba.comp  decode_model_decl.glsl  decode_model_fns.glsl  decode_model_u16.comp  decode_model_u32.comp  decode_r_rg.comp  present1.comp  present2.comp
contrib/screen-13-fx/res/shader/graphic/: font.frag  font.vert  font_bitmap.frag  present.frag  present.vert
contrib/screen-13-fx/res/shader/inc/: catmull_rom.glsl  color_space.glsl  content.glsl  quad.glsl
contrib/screen-13-fx/res/shader/transition/: _defs.glsl  _main.glsl  angular.comp  bounce.comp  bow_tie_horizontal.comp  bow_tie_vertical.comp  bow_tie_with_parameter.comp  burn.comp  butterfly_wave_scrawler.comp  cannabis_leaf.comp  circle.comp  circle_crop.comp  circle_open.comp  color_distance.comp  color_phase.comp  coord_from_in.comp  crazy_parametric_fun.comp  cross_warp.comp  cross_zoom.comp  crosshatch.comp  cube.comp  directional.comp  directional_easing.comp  directional_warp.comp  directional_wipe.comp  displacement.comp  doom_screen.comp  doorway.comp  dreamy.comp  dreamy_zoom.comp  fade.comp  fade_color.comp  fade_grayscale.comp  film_burn.comp  flyeye.comp  glitch_displace.comp  glitch_memories.comp  grid_flip.comp  heart.comp  hexagonalize.comp  (+44 more)
contrib/screen-13-fx/src/: bitmap_font.rs  clear.rs  copy.rs  image.rs  image_loader.rs  lib.rs  model.rs  present.rs  presenter.rs  transition.rs
contrib/screen-13-fx/src/text/: bitmap.rs  glyph.rs  mod.rs  vector.rs
contrib/screen-13-hot/: Cargo.toml  README.md
contrib/screen-13-hot/examples/: README.md  glsl.rs  hlsl.rs
contrib/screen-13-hot/examples/res/: fill_image.comp  fill_image.hlsl  noise.glsl  noise.hlsl
contrib/screen-13-hot/src/: compute.rs  graphic.rs  lib.rs  ray_trace.rs  shader.rs
contrib/screen-13-imgui/: Cargo.toml  README.md  build.rs
contrib/screen-13-imgui/res/shader/: imgui.frag  imgui.vert
contrib/screen-13-imgui/src/: lib.rs
contrib/screen-13-macros/: Cargo.toml
contrib/screen-13-macros/examples/: triangle.rs
contrib/screen-13-macros/src/: lib.rs  vertex.rs
contrib/screen-13-macros/src/proc_macros/: Cargo.toml  derive_vertex.rs
contrib/screen-13-window/: Cargo.toml  README.md
contrib/vk-sync/: Cargo.toml
contrib/vk-sync/src/: cmd.rs  lib.rs
examples/: README copy.md  README.md  aliasing.rs  app.rs  bake_pak.rs  basic.rs  bindless.rs  car_city.rs  char_anim.rs  cpu_readback.rs  debugger.rs  ecs.rs  egui.rs  font_bmp.rs  fuzzer.rs  getting-started.md  gorilla.rs  headless.rs  hello_world.rs  image_sampler.rs  imgui.rs  load_model.rs  mem.rs  min_max.rs  mip_compute.rs  mip_graphic.rs  mip_map.rs  models.rs  msaa.rs  multipass.rs  multithread.rs  nibbles.rs  profile_with_puffin.rs  ray_omni.rs  ray_trace.rs  rt_triangle.rs  subgroup_ops.rs  transitions.rs  triangle.rs  ttf.rs  (+3 more)
examples/content/: README.md  basic.s13  basic.toml  basic.txt  ecs.toml  models.s13  models.toml  nibbles.s13  nibbles.toml  nibbles.txt  wasm.toml  wasm.txt
examples/profile_with_puffin/: mod.rs
examples/res/: bear_box.mtl  car_city.toml  char_anim.toml  cube_scene.mtl  fonts.toml  models.toml  ttf.toml  wasm.txt
examples/shader-toy/: Cargo.toml  README.md  build.rs
examples/shader-toy/res/: pak.toml
examples/shader-toy/res/shader/: flockaroo_buf.frag  flockaroo_img.frag  glue.glsl  main.glsl  quad.vert
examples/shader-toy/src/: main.rs
examples/skeletal-anim/: Cargo.toml  README.md  build.rs
examples/skeletal-anim/res/: pak.toml
examples/skeletal-anim/res/animated_characters_3/: character_medium.glb  character_medium.toml  human_female.toml  human_male.toml  idle.glb  idle.toml  license.txt  run.glb  run.toml  zombie_female.toml  zombie_male.toml
examples/skeletal-anim/res/shader/: animated_mesh.vert  mesh.frag
examples/skeletal-anim/src/: main.rs
examples/vr/: .gitignore  Cargo.toml  README.md  build.rs
examples/vr/res/: camera.glsl  hands.frag  mammoth.frag  model.vert
examples/vr/src/: main.rs
examples/vr/src/driver/: instance.rs  mod.rs  swapchain.rs
examples/wasm/: Cargo.toml  README.md  build
examples/wasm/res/: index.html  wasm.toml
examples/wasm/res/font/: README.md  permenent-marker.toml
examples/wasm/src/: lib.rs  main.rs
examples/wasm/src/screen/: load.rs  menu.rs  mod.rs
src/: cmd_chain.rs  config.rs  device_api.rs  display.rs  error.rs  event_loop.rs  frame.rs  game.rs  hash_pool.rs  lib.rs  main.rs  program.rs
src/bake/: anim.rs  asset.rs  bitmap.rs  blob.rs  font.rs  lang.rs  material.rs  mesh.rs  mod.rs  model.rs  pak_log.rs  scene.rs  schema.rs  text.rs
src/camera/: mod.rs  orthographic.rs  perspective.rs
src/color/: alpha.rs  mod.rs  qbasic.rs
src/driver/: accel_struct.rs  buf.rs  buffer.rs  cmd_buf.rs  command_buf.rs  compute.rs  compute_pipeline.rs  descriptor_set.rs  descriptor_set_layout.rs  device.rs  device_api.rs  graphic.rs  graphic_pipeline.rs  image.rs  instance.rs  mod.rs  physical_device.rs  ray_trace.rs  ray_trace_pipeline.rs  render_pass.rs  shader.rs  surface.rs  swapchain.rs  vk_sync
src/fx/: fade.rs  mod.rs  solid.rs
src/gpu/: anim.rs  cache.rs  compute.rs  data.rs  graphics.rs  mod.rs  model.rs  render.rs  render_passes.rs  swapchain.rs  texture.rs
src/graph/: attachment.rs  binding.rs  edge.rs  info.rs  mod.rs  node.rs  pass_ref.rs  resolver.rs  swapchain.rs  validator.rs
src/input/: key.rs  key_buf.rs  key_map.rs  mod.rs  mouse.rs  mouse_buf.rs  typing.rs
src/math/: cone.rs  mod.rs  (+4 more)
tests/: README.md
(+417 files in other folders)
