[package]
name = "screen-13"
version = "0.9.0"
authors = ["John Wells <john@attackgoat.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/attackgoat/screen-13"
homepage = "https://github.com/attackgoat/screen-13"
documentation = "https://docs.rs/screen-13"
keywords = ["gamedev", "vulkan"]
categories = ["game-development", "multimedia::images", "rendering::engine"]
description = "An easy-to-use Vulkan rendering engine in the spirit of QBasic."

[features]
default = []
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracy = ["profiling/profile-with-tracy"]

[dependencies]
ash = ">=0.37.1"
ash-window = "0.12"
derive_builder = "0.12"
gpu-allocator = "0.22"
log = "0.4"
ordered-float = "3.4"
parking_lot = "0.12"
paste = "1.0"
profiling = "1.0"
raw-window-handle = "0.5"
spirq = ">=0.6.2"
vk-sync = { version = "0.4.0", package = "vk-sync-fork" }  # // SEE: https://github.com/gwihlidal/vk-sync-rs/pull/4 -> https://github.com/expenses/vk-sync-rs
winit = { version = "0.28" }

[target.'cfg(target_os = "macos")'.dependencies]
ash-molten = "0.15"

[dev-dependencies]
anyhow = "1.0"
bmfont = { version = "0.3", default-features = false }
bytemuck = "1.13"
glam = { version = "0.24", features = ["bytemuck"] }
half = { version = "2.2", features = ["bytemuck"] }
image = "0.24"
inline-spirv = "0.1"
log = "0.4"
meshopt = "0.1"
polyhedron-ops = ">=0.2, <=0.2.4"
pretty_env_logger = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking"] }
screen-13-fx = { path = "contrib/screen-13-fx" }
screen-13-imgui = { path = "contrib/screen-13-imgui" }
screen-13-egui = { path = "contrib/screen-13-egui" }
tobj = "4.0"

