[package]
name = "screen-13"
version = "0.12.6"
authors = ["John Wells <john@attackgoat.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/attackgoat/screen-13"
homepage = "https://github.com/attackgoat/screen-13"
documentation = "https://docs.rs/screen-13"
keywords = ["gamedev", "vulkan"]
categories = ["game-development", "multimedia::images", "rendering::engine"]
description = "An easy-to-use Vulkan rendering engine in the spirit of QBasic."

[features]
default = []
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracy = ["profiling/profile-with-tracy"]

[dependencies]
ash = "0.38"
ash-window = "0.13"
derive_builder = "0.20"
gpu-allocator = "0.27"
log = "0.4"
ordered-float = "5.0"
parking_lot = { version = "0.12", optional = true }
paste = "1.0"
profiling = "1.0"
raw-window-handle = "0.6"
spirq = "1.2"
vk-sync = { version = "0.5", package = "vk-sync-fork" }  # // SEE: https://github.com/gwihlidal/vk-sync-rs/pull/4 -> https://github.com/expenses/vk-sync-rs

[target.'cfg(target_os = "macos")'.dependencies]
ash-molten = "0.20"

[dev-dependencies]
anyhow = "1.0"
bmfont = { version = "0.3", default-features = false }
bytemuck = "1.22"
clap = { version = "4.5", features = ["derive"] }
glam = { version = "0.30", features = ["bytemuck"] }
half = { version = "2.4", features = ["bytemuck"] }
hassle-rs = "0.11"
image = "0.25"
inline-spirv = "0.2"
log = "0.4"
meshopt = "0.2"
polyhedron-ops = ">=0.2, <=0.2.4"
pretty_env_logger = "0.5"
puffin = "0.19"
puffin_http = "0.16"
rand = "0.9"
reqwest = { version = "0.12", features = ["blocking"] }
screen-13-fx = { path = "contrib/screen-13-fx" }
screen-13-imgui = { path = "contrib/screen-13-imgui" }
screen-13-egui = { path = "contrib/screen-13-egui" }
screen-13-window = { path = "contrib/screen-13-window" }
tobj = "4.0"
winit = "0.30"
winit_input_helper = { git = "https://github.com/stefnotch/winit_input_helper.git", rev = "6e76a79d01ce836c01b9cdeaa98846a6f0955dc4" } #"0.16"
