[package]
name = "screen-13-egui"
version = "0.1.0"
authors = ["Christian Döring <christian.doering@tum.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bytemuck = "1.13"
egui = { version = "0.22", features = [
    "bytemuck"
] }
egui-winit = "0.22"
inline-spirv = "0.1"
screen-13 = { path = "../.." }
screen-13-fx = { path = "../screen-13-fx" }
