[package]
name = "screen-13-egui"
version = "0.1.0"
authors = ["Christian Döring <christian.doering@tum.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bytemuck = "1.13"

# HACK: https://github.com/emilk/egui/pull/3496
egui = { git = "https://github.com/emilk/egui", rev = "1ab700c3cd3f932cd0cf2e5b48a05d7bed4f2c54", features = [
    "bytemuck"
] }
egui-winit = { git = "https://github.com/emilk/egui", rev = "1ab700c3cd3f932cd0cf2e5b48a05d7bed4f2c54" }

inline-spirv = "0.1"
screen-13 = { path = "../.." }
screen-13-fx = { path = "../screen-13-fx" }
