[package]
name = "screen-13-egui"
version = "0.1.0"
authors = ["Christian Döring <christian.doering@tum.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bytemuck = "1.14"
# TODO: Waiting for egui to update winit version
egui = { git = "https://github.com/emilk/egui.git", rev = "3777b8d2741f298eaa1409dc08062902f7541990" } #{ version = "0.28", features = ["bytemuck"] }
egui-winit = { git = "https://github.com/emilk/egui.git", rev = "3777b8d2741f298eaa1409dc08062902f7541990" } #"0.28"
inline-spirv = "0.2"
screen-13 = { path = "../.." }
screen-13-fx = { path = "../screen-13-fx" }
