[package]
name = "screen-13-fx"
version = "0.1.0"
authors = ["John Wells <john@attackgoat.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/attackgoat/screen-13"
homepage = "https://github.com/attackgoat/screen-13/contrib/screen-13-fx"
documentation = "https://docs.rs/screen-13"
keywords = ["gamedev", "vulkan"]
categories = ["game-development", "multimedia::images", "rendering::engine"]
description = "An immediate mode ray tracing rendering engine, heavily based on Kajiya"

[features]
default = [
    "blend-modes",
    "include-pak",
    "mask-modes",
    "matte-modes",
]
blend-modes = []
include-pak = []
mask-modes = []
matte-modes = []

[dependencies]
bmfont = { version = "0.3", default-features = false }
lazy_static = "1.4"
parking_lot = "0.12"
screen-13 = { path = "../..", features = ["bake"] }
anyhow = "1.0"

[build-dependencies]
anyhow = "1.0"
glob = "0.3.0"
hassle-rs = "0.7"
lazy_static = "1.4"
screen-13 = { path = "../..", features = ["bake"] }
shader-prepper = "0.3.0-pre.1"  
shaderc = "0.7"