[package]
name = "screen-13-fx"
version = "0.1.0"
authors = ["John Wells <john@attackgoat.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/attackgoat/screen-13"
homepage = "https://github.com/attackgoat/screen-13/contrib/screen-13-fx"
documentation = "https://docs.rs/screen-13"
keywords = ["gamedev", "vulkan"]
categories = ["game-development", "multimedia::images", "rendering::engine"]
description = "A bunch of pre-built utilities that are helpful when using Screen 13"

[features]
default = [
    "blend-modes",
    "mask-modes",
    "matte-modes",
]
blend-modes = []
mask-modes = []
matte-modes = []

[dependencies]
bmfont = { version = "0.3", default-features = false }
bytemuck = "1.9"
lazy_static = "1.4"
parking_lot = "0.12"
inline-spirv = "0.1"
screen-13 = { path = "../.."}
anyhow = "1.0"
glam = "0.22"
