[package]
name = "screen-13-hot"
version = "0.1.0"
authors = ["John Wells <john@attackgoat.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/attackgoat/screen-13"
homepage = "https://github.com/attackgoat/screen-13/contrib/screen-13-hot"
keywords = ["gamedev", "vulkan"]
categories = ["game-development", "multimedia::images", "rendering::engine"]
description = "Hot-reloading shader pipelines for Screen-13"

[dependencies]
anyhow = "1.0"
derive_builder = "0.13"
lazy_static = "1.4"
notify = "6.1"
screen-13 = { path = "../.."}
shader-prepper = "0.3.0-pre.3"
shaderc = "0.8"

[dev-dependencies]
pretty_env_logger = "0.5"
