[package]
name = "vk-sync"
version = "0.4.0"
license = "MIT/Apache-2.0"
authors = ["Ashley Ruglys <ashley.ruglys@gmail.com>"]
homepage = "https://github.com/espenses/vk-sync-rs"
repository = "https://github.com/expenses/vk-sync-rs"
documentation = "https://docs.rs/vk-sync-fork"
description = "Simplification of core Vulkan synchronization mechanisms such as pipeline barriers and events. Forked off of the original vk-sync crate which is currently unmaintained."
categories = ["api-bindings", "rendering", "rendering::engine", "rendering::graphics-api"]
keywords = ["vulkan", "vk", "ash", "graphics", "3d"]
readme = "README.md"
exclude = [
    ".travis.yml",
    ".gitignore",
    "appveyor.yml"
]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
ash = "0.38.0"
