[package]
name = "shader-toy"
version = "0.1.0"
authors = ["John Wells <john@attackgoat.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Example api usage"

[features]
default = ["include-pak"]
include-pak = []

[dependencies]
anyhow = "1.0"
bytemuck = "1.13"
pak = "0.0"
pretty_env_logger = "0.4"
screen-13 = { path = "../.." }
screen-13-fx = { path = "../../contrib/screen-13-fx" }

[build-dependencies]
anyhow = "1.0"
lazy_static = "1.4"
pak = { version = "0.0", features = ["bake"] }
shader-prepper = "0.3.0-pre.3"  
shaderc = "0.8"