[package]
name = "shader-toy"
version = "0.1.0"
authors = ["John Wells <john@attackgoat.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Example api usage"

[features]
default = ["include-pak"]
include-pak = []

[dependencies]
anyhow = "1.0"
bytemuck = "1.14"
pak = "0.4"
pretty_env_logger = "0.5"
screen-13 = { path = "../.." }
screen-13-fx = { path = "../../contrib/screen-13-fx" }
winit_input_helper = "0.15"

[build-dependencies]
anyhow = "1.0"
pak = { version = "0.4", features = ["bake"] }
paste = "1.0"
shader-prepper = "0.3.0-pre.3"  
shaderc = "0.8"
