[package]
name = "wasm"
version = "0.1.0"
authors = ["john wells <john@attackgoat.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { version = "0.14", features = ["full"] }
pretty_env_logger = "0.4"
tokio = { version = "1", features = [
    "fs",
    "macros",
    "io-std",
    "io-util",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "test-util",
] }
tokio-util = { version = "0.6", features = ["codec"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
screen-13 = { path = "../.." }
wasm-bindgen = "0.2"

# Debug deps below: https://github.com/rust-lang/cargo/issues/7634
console_error_panic_hook = "0.1"
console_log = "0.2"
